# rust-server-wasm

./: .env  .gitignore  README.md  spin.toml
api/: Cargo.toml
api/src/: lib.rs
assets/: index.html
cron-app/: Cargo.toml
drag-n-drop/: home.html  index.html
scheduler/: Cargo.toml
scheduler/src/: lib.rs
